# chess

./: CMakeLists.txt
src/: boards.cpp  boards.hpp  evaluation.cpp  evaluation.hpp  main.cpp  movegen.cpp  movegen.hpp  search.cpp  search.hpp  utils.cpp  utils.hpp
test/: test_boards.cpp  test_evaluation.cpp  test_main.cpp  test_movegen.cpp  test_search.cpp  test_utils.cpp
